# budgie-media-player

./: .gitignore  AUTHORS  Makefile.am  README  README.md  README.mkd  autogen.sh  common.mk  config.h.meson  configure.ac  meson.build  sparse_check.sh
data/: Makefile.am  budgie-media-player.desktop  budgie.desktop  com.evolve-os.budgie.media-player.gschema.xml  io.github.ikeydoherty.Budgie.gschema.xml  meson.build
src/: Makefile.am  budgie-control-bar.c  budgie-control-bar.h  budgie-media-label.c  budgie-media-label.h  budgie-media-view.c  budgie-media-view.h  budgie-settings-view.c  budgie-settings-view.h  budgie-status-area.c  budgie-status-area.h  budgie-window.c  budgie-window.h  common.h  main.c  media.h  meson.build  music-player-window.c  music-player-window.h  player-status-area.c  player-status-area.h  player-view.c  player-view.h  util.c  util.h
src/db/: budgie-db.c  budgie-db.h  media-db.c  media-db.h
